--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -227,7 +227,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/Godot XR Tools Tutorial Demo XRT 4.3.0.exe"
+export_path="../exports/Godot XR Tools Tutorial Demo XRT 4.4.0-dev2.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
